--- a/07_Ensemble_Methods.ipynb
+++ b/07_Ensemble_Methods.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,13 +89,411 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 117,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "raw dataframe\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "      <td>768.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.845052</td>\n",
+       "      <td>120.894531</td>\n",
+       "      <td>69.105469</td>\n",
+       "      <td>20.536458</td>\n",
+       "      <td>79.799479</td>\n",
+       "      <td>31.992578</td>\n",
+       "      <td>0.471876</td>\n",
+       "      <td>33.240885</td>\n",
+       "      <td>0.348958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.369578</td>\n",
+       "      <td>31.972618</td>\n",
+       "      <td>19.355807</td>\n",
+       "      <td>15.952218</td>\n",
+       "      <td>115.244002</td>\n",
+       "      <td>7.884160</td>\n",
+       "      <td>0.331329</td>\n",
+       "      <td>11.760232</td>\n",
+       "      <td>0.476951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.078000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>27.300000</td>\n",
+       "      <td>0.243750</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>117.000000</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>30.500000</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>0.372500</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>140.250000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>127.250000</td>\n",
+       "      <td>36.600000</td>\n",
+       "      <td>0.626250</td>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>199.000000</td>\n",
+       "      <td>122.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>846.000000</td>\n",
+       "      <td>67.100000</td>\n",
+       "      <td>2.420000</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Pregnancies     Glucose  BloodPressure  SkinThickness     Insulin  \\\n",
+       "count   768.000000  768.000000     768.000000     768.000000  768.000000   \n",
+       "mean      3.845052  120.894531      69.105469      20.536458   79.799479   \n",
+       "std       3.369578   31.972618      19.355807      15.952218  115.244002   \n",
+       "min       0.000000    0.000000       0.000000       0.000000    0.000000   \n",
+       "25%       1.000000   99.000000      62.000000       0.000000    0.000000   \n",
+       "50%       3.000000  117.000000      72.000000      23.000000   30.500000   \n",
+       "75%       6.000000  140.250000      80.000000      32.000000  127.250000   \n",
+       "max      17.000000  199.000000     122.000000      99.000000  846.000000   \n",
+       "\n",
+       "              BMI  DiabetesPedigreeFunction         Age     Outcome  \n",
+       "count  768.000000                768.000000  768.000000  768.000000  \n",
+       "mean    31.992578                  0.471876   33.240885    0.348958  \n",
+       "std      7.884160                  0.331329   11.760232    0.476951  \n",
+       "min      0.000000                  0.078000   21.000000    0.000000  \n",
+       "25%     27.300000                  0.243750   24.000000    0.000000  \n",
+       "50%     32.000000                  0.372500   29.000000    0.000000  \n",
+       "75%     36.600000                  0.626250   41.000000    1.000000  \n",
+       "max     67.100000                  2.420000   81.000000    1.000000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean insulin level\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "155.5482233502538"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin  BMI  \\\n",
+       "count          0.0      0.0            0.0            0.0      0.0  0.0   \n",
+       "mean           NaN      NaN            NaN            NaN      NaN  NaN   \n",
+       "std            NaN      NaN            NaN            NaN      NaN  NaN   \n",
+       "min            NaN      NaN            NaN            NaN      NaN  NaN   \n",
+       "25%            NaN      NaN            NaN            NaN      NaN  NaN   \n",
+       "50%            NaN      NaN            NaN            NaN      NaN  NaN   \n",
+       "75%            NaN      NaN            NaN            NaN      NaN  NaN   \n",
+       "max            NaN      NaN            NaN            NaN      NaN  NaN   \n",
+       "\n",
+       "       DiabetesPedigreeFunction  Age  Outcome  \n",
+       "count                       0.0  0.0      0.0  \n",
+       "mean                        NaN  NaN      NaN  \n",
+       "std                         NaN  NaN      NaN  \n",
+       "min                         NaN  NaN      NaN  \n",
+       "25%                         NaN  NaN      NaN  \n",
+       "50%                         NaN  NaN      NaN  \n",
+       "75%                         NaN  NaN      NaN  \n",
+       "max                         NaN  NaN      NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "replace zeros with mean in each category\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the dataset, clean it, and then fit and a RandomForestClassifier \n",
     "# and make predictions on it below!\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.ensemble import RandomForestClassifier \n",
+    "\n",
+    "pimadf = pd.read_csv('datasets/pima_indians_diabetes.csv')\n",
+    "print(\"raw dataframe\")\n",
+    "display(pimadf.describe())\n",
+    "print(\"Mean insulin level\")\n",
+    "display(pimadf[pimadf[\"Insulin\"] != 0].Insulin.mean())\n",
+    "pimadf.loc[df.Insulin == 0, 'Insulin'] = 155\n",
+    "display(pimadf[pimadf.Insulin == 0].describe())\n",
+    "\n",
+    "def mrClean(df, ignore_cols):\n",
+    "    #don't want to manipulate answers or else sadness will rue the day\n",
+    "    for col in df.keys():\n",
+    "        if col not in ignore_cols:\n",
+    "            mean = df[df[col] != 0][col].mean()\n",
+    "            df.loc[df[col] == 0, col] = mean\n",
+    "            \n",
+    "print(\"replace zeros with mean in each category\")\n",
+    "mrClean(pimadf, [\"Outcome\", \"Pregnancies\"])\n",
+    "\n",
+    "y = np.ravel(pimadf[[\"Outcome\"]])\n",
+    "X = pimadf.drop([\"Outcome\"], axis=1)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy score: 0.7760416666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=100, max_depth=4, min_samples_split=50)\n",
+    "clf.fit(X_train, y_train)\n",
+    "preds = clf.predict(X_test)\n",
+    "print(\"accuracy score: {}\".format(accuracy_score(y_test, preds)))"
    ]
   },
   {
@@ -123,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +534,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,19 +562,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy score: 0.7604166666666666\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below!"
+    "# Write your code below!\n",
+    "# Sample code from sklearn documentation\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.datasets import make_classification\n",
+    "\n",
+    "X, y = make_classification(n_samples=1000, n_features=4,\n",
+    "                            n_informative=2, n_redundant=0,\n",
+    "                            random_state=0, shuffle=False)\n",
+    "clf = RandomForestClassifier(max_depth=2, random_state=0)\n",
+    "clf.fit(X, y)\n",
+    "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+    "            max_depth=2, max_features='auto', max_leaf_nodes=None,\n",
+    "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+    "            min_samples_leaf=1, min_samples_split=2,\n",
+    "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+    "            oob_score=False, random_state=0, verbose=0, warm_start=False)\n",
+    "# print(clf.feature_importances_)\n",
+    "\n",
+    "# print(clf.predict([[0, 0, 0, 0]]))\n",
+    "#End scikit documentation sample code\n",
+    "\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "#X_train, X_test, y_train, y_test\n",
+    "clf = GradientBoostingClassifier(n_estimators=100, max_depth=2)\n",
+    "clf.fit(X_train, y_train)\n",
+    "preds = clf.predict(X_test)\n",
+    "print(\"accuracy score: {}\".format(accuracy_score(y_test, preds)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'xgboost'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-128-47026b0345d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mloadtxt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mXGBClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
+     ]
+    }
+   ],
+   "source": [
+    "#This comes from the xgboost documentation\n",
+    "from numpy import loadtxt\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# load data\n",
+    "dataset = loadtxt('pima-indians-diabetes.csv', delimiter=\",\")\n",
+    "\n",
+    "# split data into X and y\n",
+    "X = dataset[:,0:8]\n",
+    "Y = dataset[:,8]\n",
+    "\n",
+    "# split data into train and test sets\n",
+    "seed = 7\n",
+    "test_size = 0.33\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=test_size, random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:MS-ML-P3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-MS-ML-P3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -188,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
